# gr-discord-bot

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: cd.yaml
src/: main.rs
