[package]
name = "gr-discord-bot"
version = "0.1.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { version = "0.9.0-rc.2", default-features = false, features = ["client", "gateway", "model", "rustls_backend"]}
handlebars = "3.5"
serde_json = "1.0"
chrono = "0.4"